<resources>
    <string name="app_name" translatable="false">La Despensa de Sonia</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="loginFail">Login info was incorrect</string>
    <string name="notifTitle">Aviso de inicio de sesión</string>
    <string name="channelDesc">Notification channel</string>
    <string name="notifDesc">"Sesión iniciada por: "</string>
    <string name="addItem">Add Item</string>
    <string name="calendar">Set reminder</string>
    <string name="logout">Log out</string>
    <string name="changeLang">Change language</string>
    <string name="selectLang">Select a language</string>
    <string name="spanish">Spanish</string>
    <string name="basque">Basque</string>
    <string name="english">English</string>
    <string name="saveBttn">Save item</string>
    <string name="returnBttn">Go back</string>
    <string name="textLastBought">Date of last purchease</string>
    <string name="editLastBought" translatable="false">dd-MM-YYYY</string>
    <string name="textExpirationDate">Nearest expiration date</string>
    <string name="editLowAmount" translatable="false">N.N</string>
    <string name="textLowAmount">Lowest amount allowed</string>
    <string name="textCurAmount">Current amount available</string>
    <string name="editItemName">Insert item name here…</string>
    <string name="textItemName">Item name</string>
    <string name="delete_button_description">Borrar artículo</string>
    <string name="prodNameReq">A name is required</string>
    <string name="amountReq">Amount format is 0.00</string>
    <string name="dateReq">Date format has to be dd-MM-YYYY</string>
    <string name="saveItemSuccess">Item saved successfully!</string>
</resources>